--- a/JavaScript Class/indexii.html
+++ b/JavaScript Class/indexii.html
@@ -13,7 +13,9 @@
     </script> -->
 </head>
 <body>
-    <h1>Welcome to JavaScript</h1>
+    <h1 id="header">Welcome to JavaScript</h1>
+    <input type="text" id="name" placeholder="Na ya so for put d colour">
+    <button onclick="press()">Press Ya</button>
     <script src="script.js"></script>
 </body>
 </html>
